--- a/css/web.css
+++ b/css/web.css
@@ -79,6 +79,20 @@ body{
     text-transform: uppercase;
     letter-spacing: 1.7px;
 }
+@media(max-width : 767px){
+    .nav .navbar li{
+        display: inline-block;
+        padding: 10px;
+        margin: 0
+    }
+}
+@media(min-width : 768px) and (max-width : 991px){
+    .nav .navbar li{
+        display: inline-block;
+        padding: 10px;
+        margin: 0 25px
+    }
+}
 /* End Navbar */
 
 /* Start Features */
