--- a/css/web.css
+++ b/css/web.css
@@ -432,6 +432,26 @@ body{
     cursor: pointer;
     display: none
 }
+@media(max-width : 767px){
+.up{
+    padding: 10px;
+    margin: 15px;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    font-size: 27px;
+}
+}
+@media(min-width : 768px) and (max-width : 991px){
+.up{
+    padding: 10px;
+    margin: 15px;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    font-size: 27px;
+}
+}
 /* End Button To Up */
 
 @media(max-width : 767px){ /* mobile & tablt size */
